styles.css
/* *************************** CUSTOM STYLES *************************** */

:root {
  --clr-main-black: #262626;
  --clr-shadow-gray: #888888;
}

/* *************************** BASE STYLES *************************** */

*,
::before,
::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  outline: none;
}

html,
body {
  width: 100%;
  overflow-x: hidden;
  scroll-behavior: smooth;

  font-size: 62.5%;
  font-family: "Montserrat", sans-serif, helvetica;
  letter-spacing: 0.1rem;
}

body {
  font-size: 1.6rem;
}

li {
  list-style: none;
}

a {
  text-decoration: none;
  color: #fff;
}

img {
  display: block;
}

/* *************************** END BASE STYLES *************************** */

/* *************************** START NAVBAR *************************** */

header {
  display: inline-block;
  width: 100%;
  padding: 1rem;
  background-color: var(--clr-main-black);
  position: fixed;
  z-index: 100;
  color: var(--clr-main-black);
}

nav {
  float: right;
}

nav ul li {
  display: inline-block;
  padding: 0.5rem 1rem;
  font-size: 2rem;
  font-weight: 300;
}

nav ul li a {
  display: inline-block;
  text-decoration: none;
}

button {
  margin: 1rem;
  font-size: 2rem;
  font-weight: 500;
  padding: 1rem 2rem;
  border: none;
  cursor: pointer;
}

.contact-btn {
  color: var(--clr-main-black);
}

/* Navbar hover */
.hover a:after {
  display: block;
  content: "";
  border-bottom: 2px solid #fff;
  margin-top: 0.5rem;
  transform: scaleX(0);
  transition: transform 200ms ease-in-out;
}

.hover a:hover:after {
  transform: scaleX(1);
}

/* Hamburger button & Logo on Navbar- Hidden by default */
.logo {
  float: left;
  position: relative;
  left: 1rem;
  color: #fff;
  font-size: 3rem;
  font-weight: 400;
  display: none;
  padding: 1rem;
}

.toggle-btn {
  width: 35px;
  position: absolute;
  right: 3rem;
  top: 2.5rem;
  display: none;
}

.toggle-btn span {
  display: inline-block;
  width: 100%;
  height: 2px;
  background-color: #fff;
  float: left;
  margin-bottom: 8px;
}

/* *************************** END NAVBAR *************************** */

/* *************************** START WELCOME SECTION *************************** */

.welcome-section-wrapper {
  /* Responsive viewing settings */
  width: 100%;
  min-height: 100vh;
  margin: 0 auto;

  /* For centering content */
  display: flex;
  align-items: center;
  justify-content: center;

  color: var(--clr-main-black);
}

.about-left-wrapper {
  width: 50%;
  margin: 6rem 0 6rem 6rem;
}

.about-right-wrapper {
  width: 50%;
  margin: 6rem 6rem 6rem 0;
}

.about-right-wrapper,
.about-right-pic {
  display: flex;
  align-items: center;
  justify-content: center;
}

/* Padding between the elements on the left half */
.about-left-wrapper div,
.about-right-pic {
  margin: 2rem 0;
  padding: 0 5rem;
}

.about-left-header h1 {
  font-size: 4rem;
  font-weight: 500;
}

.about-left-summary {
  font-size: 2rem;
  font-weight: 400;
  line-height: 2.8rem;
}

.about-left-sub-summary {
  font-size: 1.6rem;
  font-weight: 200;
  line-height: 2.2rem;
  width: 75%;
}

.profile-pic {
  width: 60%;
}

/* *************************** END WELCOME SECTION *************************** */

/* *************************** START SKILLS SECTION *************************** */

#skills {
  width: 100%;
  min-height: 100vh;
  margin: 0 auto;

  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;

  background: var(--clr-main-black);
  color: white;
}

.front-end,
.back-end,
.other,
.software,
.key-comp,
.super-skills {
  display: flex;
  flex-direction: column;
  margin: 2rem;
}

.skills-hard,
.skills-soft {
  width: 100%;
  padding: 2rem 4rem;
  display: flex;
  justify-content: center;
}

.skills-section-header {
  text-align: center;
  font-size: 4rem;
  font-weight: 500;
  margin: 2rem;
}

/* Skills section header */
.skills div,
.skills-soft div {
  display: flex;
  align-items: center;
}

.skills-header h3,
.skills-hard h4,
.skills-soft h4 {
  font-weight: 500;
  font-size: 2rem;
  border-bottom: 1px solid #fff;
}

.skills-hard li,
.skills-soft li {
  margin: 0.5rem;
}

/* *************************** END SKILLS SECTION *************************** */

/* *************************** START PROJECTS SECTION *************************** */

#projects {
  width: 100%;
  min-height: 100vh;
}

.projects-section {
  text-align: center;
  padding: 10rem 4rem;
  margin: auto;
}

.projects-section-header {
  font-size: 4rem;
  font-weight: 500;
  max-width: 640px;
  margin: 0 auto 6rem auto;
}

.project-title {
  font-size: 2rem;
  text-align: center;
  padding: 1rem;
  background: var(--clr-main-black);
  font-weight: 200;
}

.projects-grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
  grid-gap: 4rem;
  width: 100%;
}

.project-image {
  width: 100%;
  object-fit: cover;
}

.image {
  display: inline-block;
  overflow: hidden;
}

.image img {
  display: block;
  width: 100%;
  height: auto;
}

.image .zoom-in img {
  transform: scale(1);
  transition: 200ms ease-in-out;
}

.image .zoom-in:hover img {
  transform: scale(1.5);
  opacity: 0.7;
}

/* *************************** END PROJECTS SECTION *************************** */

/* *************************** START EDUCATION SECTION *************************** */

#education {
  width: 100%;
  min-height: 100vh;

  display: flex;
  align-items: center;
  justify-content: center;

  background: var(--clr-main-black);
  color: white;
}

.education-section-header {
  text-align: center;
  font-size: 4rem;
  font-weight: 500;
  margin: 5rem;
}

.school {
  margin: 2rem;
}

.school li {
  margin-top: 0.25rem;
  font-weight: 200;
}

.school-header {
  margin-bottom: 0.5rem;
}

.school-header h3 {
  font-weight: 500;
  font-size: 2rem;
}

.csus {
  font-style: italic;
}
/* ... */

